--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width">
+  <meta property="og:title" content="Bird Blaster">
+  <meta property="og:description" content="Blast Birds to your hearts content">
+  <meta property="og:image" content="https://genius-mouse.static.app/bird-blaster-img.png">
+  <meta property="og:url" content="https://birdblaster.xyz/">
   <title>Bird Blaster</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous">
